# radarr-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  MCP.md  Makefile  README.md  STARR_BUTLER_PROJECT.md  TODO.md  docker-compose.dev.yml  pyproject.toml
scripts/: test_mcp_local.py  test_mcp_long.sh  test_mcp_simple.sh  test_sse_client.py
src/radarr_manager/: __init__.py
src/radarr_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/radarr_manager/cli/: __main__.py
src/radarr_manager/clients/: __init__.py  radarr.py
src/radarr_manager/config/: __init__.py  settings.py
src/radarr_manager/discovery/: __init__.py  agent.py  orchestrator.py  parsers.py  prompt.py  validation.py
src/radarr_manager/mcp/: __init__.py  schemas.py  server.py
src/radarr_manager/models/: __init__.py  movie.py
src/radarr_manager/providers/: __init__.py  agentic.py  base.py  factory.py  hybrid.py  openai.py  smart_agentic.py  static.py
src/radarr_manager/scrapers/: __init__.py  base.py  crawl4ai.py  factory.py  firecrawl.py
src/radarr_manager/services/: sync.py  (+4 more)
tests/: test_cli_smoke.py  test_integration.py  test_mcp_integration_e2e.py
tests/clients/: test_radarr.py
tests/config/: test_settings.py
tests/discovery/: __init__.py  test_smart_agents.py  test_smart_orchestrator.py  test_smart_protocol.py
tests/fixtures/: __init__.py  openai_responses.py  radarr_responses.py
tests/mcp/: test_server.py
tests/providers/: __init__.py  test_factory.py  test_openai.py
tests/services/: test_sync.py
(+18 files in other folders)
